cut way down on the chance of scars and moles; Qwen Image is awful at them

--- a/randomperson.yaml
+++ b/randomperson.yaml
@@ -164,8 +164,8 @@ p:
         - densely-freckled
 
     skin:
-        - skin with {small|large|prominent} moles
-        - skin with {faint|noticeable|prominent} scars
+        - 0.1::skin with {small|large|prominent} moles
+        - 0.1::skin with {faint|noticeable|prominent} scars
         - skin
 
     haircut:
